# vacation-copilot

./: .agents-cli-spec.md  .gitignore  Dockerfile  GEMINI.md  PROJECT_ARCHITECTURE.md  README.md  agents-cli-manifest.yaml  pyproject.toml  pytest.ini  run_vacation.sh
app/: __init__.py  agent.py  fast_api_app.py
app/app_utils/: telemetry.py  typing.py
app/prompts/: __init__.py  menu_matcher.py  onboarding.py
app/shared/: __init__.py  markdown_store.py
app/tools/: __init__.py  document_parser.py  itinerary_manager.py  menu_analyzer.py  profile_manager.py
docs/: INSTRUCTIONS.md
tests/: conftest.py
tests/eval/: eval_config.yaml
tests/eval/datasets/: README.md  basic-dataset.json  onboarding-dataset.json
tests/integration/: test_agent.py  test_onboarding.py  test_server_e2e.py
tests/unit/: test_tools.py
