[project]
name = "vacation-copilot"
version = "0.1.0"
description = "Elite travel concierge utilizing a unified flat agent architecture via the Google ADK."
readme = "README.md"
authors = [
    {name = "Leonid Bolshinsky", email = "your@email.com"},
]
dependencies = [
    "google-adk[gcp]>=2.0.0,<3.0.0",
    "opentelemetry-instrumentation-google-genai>=0.1.0,<1.0.0",
    "gcsfs>=2024.11.0",
    "google-cloud-logging>=3.12.0,<4.0.0",
    "python-dotenv>=1.2.2",
]
requires-python = ">=3.11,<3.14"

[dependency-groups]
dev = [
    "pytest>=9.0.2,<10.0.0",
    "pytest-asyncio>=1.0.0,<2.0.0",
    "nest-asyncio>=1.6.0,<2.0.0",
]

[project.optional-dependencies]
eval = [
    "google-adk[eval]>=2.0.0,<3.0.0",
    "google-cloud-aiplatform[evaluation]>=1.156.0",
]
lint = [
    "ruff>=0.4.6,<1.0.0",
    "ty>=0.0.1a0",
    "codespell>=2.2.0,<3.0.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "RUF", # ruff-specific rules
]
ignore = ["E501", "C901", "B006"] # Ignore line too long, high complexity, mutable defaults

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ty]
# ty is Astral's Rust-based type checker (built by the same team behind ruff/uv)
# Reference: https://docs.astral.sh/ty/

[tool.ty.environment]
python-version = "3.11"

[tool.ty.src]
exclude = [".venv/**"]

[tool.ty.rules]
# Suppress noisy checks common to dynamic LLM framework interactions
unresolved-import = "ignore"
unresolved-attribute = "ignore"
invalid-argument-type = "ignore"
invalid-assignment = "ignore"
invalid-return-type = "ignore"
possibly-missing-attribute = "ignore"
not-subscriptable = "ignore"
deprecated = "ignore"

[tool.codespell]
ignore-words-list = "rouge"
skip = "./locust_env/*,uv.lock,.venv,**/package-lock.json"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = "."
asyncio_default_fixture_loop_scope = "function"

[tool.hatch.build.targets.wheel]
packages = ["app"]